--- a/TenVersion/AndroidManifest.xml
+++ b/TenVersion/AndroidManifest.xml
@@ -11,19 +11,24 @@
         android:label="@string/app_name" >
         <activity
             android:name=".TenVersionActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:label="@string/app_name" 
+        />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         
          <activity android:name=".SafeListActivity" />
          <activity android:name=".LiveListActivity" />
          <activity android:name=".EtcListActivity" />
          <activity android:name=".SettingListActivity" />
          <activity android:name=".TestDialogActivity" />
+         
+         
+          <activity android:name=".DBTestActivity">
+                       <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+         </activity>
     </application>
 
 </manifest>
