--- a/TenVersion/AndroidManifest.xml
+++ b/TenVersion/AndroidManifest.xml
@@ -5,30 +5,47 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
-
-    <application
+    
+    <!-- wifi change permission -->
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	
+	
+	<application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name=".TenVersionActivity"
-            android:label="@string/app_name" 
-        />
-
-        
-         <activity android:name=".SafeListActivity" />
-         <activity android:name=".LiveListActivity" />
-         <activity android:name=".EtcListActivity" />
-         <activity android:name=".SettingListActivity" />
-         <activity android:name=".TestDialogActivity" />
-         
-         
-          <activity android:name=".DBTestActivity">
-                       <intent-filter>
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-         </activity>
-    </application>
+        </activity>
+        
+        
+        <activity android:name=".SafeListActivity" />
+       
+        <activity android:name=".LiveListActivity" />
+        
+        <activity android:name=".EtcListActivity" />
+        
+        <activity android:name=".SettingListActivity" />
+        
+        <activity android:name=".TestDialogActivity" />
+        
+        <activity android:name=".DBTestActivity" />
+        
+        <receiver android:name=".WifiReceiver" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.wifi.STATE_CHANGE"/> 
 
+            </intent-filter>
+        </receiver>
+
+    </application>
 </manifest>
