--- a/TenVersion/AndroidManifest.xml
+++ b/TenVersion/AndroidManifest.xml
@@ -5,15 +5,15 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
-    
+
     <!-- wifi change permission -->
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	<uses-permission android:name="android.permission.VIBRATE" />
 	
-	
-	<application
+    <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -26,27 +26,35 @@
             </intent-filter>
         </activity>
         
-        
         <activity android:name=".SafeListActivity" />
-       
         <activity android:name=".LiveListActivity" />
-        
         <activity android:name=".EtcListActivity" />
-        
         <activity android:name=".SettingListActivity" />
-        
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".LiveListAddActivity" />
+        <activity android:name=".LIveListDelActivity" />
+        <activity android:name=".LIveListDelActivity2" />
         <activity android:name=".TestDialogActivity" />
         
-        <activity android:name=".DBTestActivity" />
+        <activity android:name=".FlipperView"
+           			android:theme="@android:style/Theme.Translucent"> 
+            <intent-filter>
+                <action android:name="smartplus.tenversion.action.flipper" />
+            </intent-filter>
+        </activity>
         
-        <receiver android:name=".WifiReceiver" >
+        <activity android:name=".PreviewListActivity"
+            		android:theme="@android:style/Theme.Translucent" />
+
+		<receiver android:name=".WifiReceiver" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="android.net.wifi.STATE_CHANGE"/> 
 
             </intent-filter>
         </receiver>
-
-
+        
+        
     </application>
+
 </manifest>
